FEAT: added logs endpoint
